--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,22 +1,23 @@
-# Maven
-# Build your Java project and run tests with Apache Maven.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
-
 trigger:
-- master
+- master  # or main, depending on your branch
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'ubuntu-latest'
 
 steps:
-- task: Maven@3
+- task: Maven@4
   inputs:
-    mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.11'
-    jdkArchitectureOption: 'x64'
+    mavenPomFile: 'pom.xml'          # root POM to build both server and webapp
+    goals: 'clean install'           # install ensures module dependencies are resolved
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
+    javaHomeOption: 'JDKVersion'
+    jdkVersionOption: '1.11'
+    mavenVersionOption: 'Default'
+
+# Publish WAR artifact from webapp/target
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: 'webapp/target'
+    ArtifactName: 'webapp-war'
+    publishLocation: 'Container'
